--- a/src/app/components/pages/warehouse/stock-in/create/create.component.html
+++ b/src/app/components/pages/warehouse/stock-in/create/create.component.html
@@ -1,3 +1,5 @@
+<p-toast />
+
 <div class="grid">
     <div class="col-12">
         <p-toolbar styleClass="mb-2">
@@ -59,7 +61,10 @@
                                                     >
                                                         <img
                                                             [src]="
-                                                                item.productImage
+                                                                imageUrl +
+                                                                item
+                                                                    .productImages[0]
+                                                                    ?.link
                                                             "
                                                             alt="Product Image"
                                                         />
@@ -70,18 +75,16 @@
                                                         <h1
                                                             class="product-name"
                                                         >
-                                                            {{
-                                                                item.productName
-                                                            }}
+                                                            {{ item.name }}
                                                         </h1>
                                                         <span
                                                             class="product-code"
                                                         >
-                                                            {{
+                                                            <!-- {{
                                                                 item.serialNumbers.join(
                                                                     ", "
                                                                 )
-                                                            }}
+                                                            }} -->
                                                         </span>
                                                     </div>
                                                     <div
@@ -91,7 +94,7 @@
                                                             class="product-price"
                                                         >
                                                             {{
-                                                                item.price
+                                                                item.sellingPrice
                                                                     | currency
                                                                         : "VND"
                                                                         : "symbol"
@@ -102,20 +105,19 @@
                                                         >
                                                             Có thể bán:
                                                             <strong>{{
-                                                                item.inventory
+                                                                item.mass
                                                             }}</strong>
                                                         </span>
                                                     </div>
                                                 </div>
                                             </div>
-
                                             <!-- [(ngModel)]="this.optionsFillerProduct.KeyWord" -->
                                         </span>
                                     </div>
                                     <div class="col-12 md:col-1">
                                         <div
                                             class="col-md-1"
-                                            (click)="onToggleActiveBarcode()"
+                                            (click)="onBarcodeClick()"
                                         >
                                             <svg
                                                 [ngStyle]="{
@@ -168,13 +170,13 @@
                         </ng-template>
 
                         <ng-template pTemplate="body" let-data let-i="rowIndex">
-                            <tr>
+                            <tr style="height: 105px">
                                 <td style="width: 3%">
                                     {{ i + 1 }}
                                 </td>
                                 <td style="width: 8%">
                                     <img
-                                        [src]="data.productImage"
+                                        [src]="imageUrl + data.productImage"
                                         alt="Product Image"
                                         style="
                                             width: 50px;
@@ -184,12 +186,12 @@
                                     />
                                 </td>
                                 <td style="width: 15.5%">
-                                    {{ data.name }}
+                                    {{ data.productName }}
                                 </td>
                                 <td style="width: 12.5%; text-align: center">
                                     <p-inputNumber
                                         inputId="integeronly"
-                                        [(ngModel)]="data.sellingPrice"
+                                        [(ngModel)]="data.price"
                                         (ngModelChange)="updateTotal(data)"
                                         (onFocus)="
                                             functionService.handleFocusPrice(
@@ -199,12 +201,21 @@
                                     />
                                 </td>
                                 <td style="width: 9%; text-align: center">
-                                    {{ data.unitName }}
+                                    {{ data.unit }}
                                 </td>
                                 <td style="width: 13.5%; text-align: center">
-                                    <div class="flex align-items-center">
+                                    <div
+                                        class="flex flex-column align-items-center justify-content-center"
+                                        style="position: relative"
+                                    >
                                         <p-inputNumber
+                                            *ngIf="data.productType === 0"
                                             [(ngModel)]="data.quantity"
+                                            (onFocus)="
+                                                functionService.handleFocusPrice(
+                                                    $event
+                                                )
+                                            "
                                             (ngModelChange)="updateTotal(data)"
                                             buttonLayout="horizontal"
                                             (onFocus)="
@@ -214,13 +225,27 @@
                                             "
                                             inputId="horizontal"
                                             spinnerMode="horizontal"
-                                            [min]="0"
+                                            [min]="1"
                                             [step]="1"
-                                            decrementButtonClass="p-button-danger"
-                                            incrementButtonClass="p-button-success"
-                                            incrementButtonIcon="pi pi-plus"
-                                            decrementButtonIcon="pi pi-minus"
                                         />
+                                        <span
+                                            *ngIf="data.productType === 1"
+                                            style="
+                                                text-align: right;
+                                                padding-right: 10px;
+                                                width: 100%;
+                                            "
+                                            >{{ data.quantity }}</span
+                                        >
+                                        <span
+                                            style="
+                                                position: absolute;
+                                                top: 44px;
+                                            "
+                                            *ngIf="data.isValid"
+                                            class="error-message"
+                                            >{{ data.isValidMessage }}</span
+                                        >
                                     </div>
                                 </td>
                                 <td style="width: 12.5%; text-align: center">
@@ -233,7 +258,7 @@
                                     ></i>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr *ngIf="data && data.productType == 1">
                                 <td colspan="8" class="p-3 border-none">
                                     <div class="flex flex-column">
                                         <label for="" class="mb-2"
@@ -267,6 +292,9 @@
                                                     [(ngModel)]="
                                                         variant.frameNumber
                                                     "
+                                                    (ngModelChange)="
+                                                        checkValidity()
+                                                    "
                                                 />
                                             </span>
                                             <span class="variant-item-input">
@@ -277,6 +305,9 @@
                                                     spellcheck="false"
                                                     [(ngModel)]="
                                                         variant.engineNumber
+                                                    "
+                                                    (ngModelChange)="
+                                                        checkValidity()
                                                     "
                                                     placeholder="Nhập số máy"
                                                 />
@@ -353,6 +384,7 @@
                                     </ng-template>
                                 </p-treeSelect>
                             </div>
+
                             <div class="field grid">
                                 <div class="col-12 mb-2 md:col-6 md:mb-0">
                                     Nhân viên: Bùi Thị Bảo Anh
@@ -363,6 +395,7 @@
                                     28/6/2024 13:23
                                 </div>
                             </div>
+
                             <div class="field grid">
                                 <!-- Tổng số sản phẩm -->
 
@@ -436,6 +469,7 @@
                                 </div>
                                 <div
                                     class="col-12 mb-2 md:col-6 md:mb-0 flex justify-content-end input-number-custom input-number-payment"
+                                    style="position: relative"
                                 >
                                     <p-inputNumber
                                         inputId="integeronly"
@@ -449,6 +483,15 @@
                                             )
                                         "
                                     />
+
+                                    <span
+                                        *ngIf="stockInReceipt.isValidMoney"
+                                        class="error-message"
+                                        style="position: absolute; top: 48px"
+                                        >{{
+                                            stockInReceipt.isMessageValidMoney
+                                        }}</span
+                                    >
                                 </div>
                             </div>
 
@@ -461,6 +504,7 @@
                                     spellcheck="false"
                                 ></textarea>
                             </div>
+
                             <button
                                 pButton
                                 pRipple
