--- a/src/app/layout/app.footer.component.html
+++ b/src/app/layout/app.footer.component.html
@@ -1,5 +1,5 @@
-<div class="layout-footer">
-    <!-- <img
+<!-- <div class="layout-footer">
+    <img
         src="assets/layout/images/{{
             layoutService.config().colorScheme === 'light'
                 ? 'logo-dark'
@@ -10,5 +10,5 @@
         class="mr-2"
     />
     by
-    <span class="font-medium ml-2">PrimeNG</span> -->
-</div>
+    <span class="font-medium ml-2">PrimeNG</span>
+</div> -->
