--- a/src/assets/layout/styles/layout/_utils.scss
+++ b/src/assets/layout/styles/layout/_utils.scss
@@ -1,6 +1,7 @@
 .card {
     background: $whiteColor;
     // border: 1px solid var(--surface-border);
+    border: none !important;
     margin-bottom: 2rem;
     box-shadow: var(--card-shadow);
     border-radius: $borderRadius;
