--- a/src/app/components/pages/warehouse/stock-in/create/create.component.html
+++ b/src/app/components/pages/warehouse/stock-in/create/create.component.html
@@ -60,6 +60,10 @@
                                                         class="product__item-left"
                                                     >
                                                         <img
+                                                            *ngIf="
+                                                                item
+                                                                    .productImages[0]
+                                                            "
                                                             [src]="
                                                                 imageUrl +
                                                                 item
@@ -68,6 +72,36 @@
                                                             "
                                                             alt="Product Image"
                                                         />
+
+                                                        <svg
+                                                            *ngIf="
+                                                                !item
+                                                                    .productImages[0]
+                                                            "
+                                                            viewBox="0 0 24 24"
+                                                            fill="none"
+                                                            xmlns="http://www.w3.org/2000/svg"
+                                                            class="jss3869 ng-star-inserted"
+                                                            style="
+                                                                color: rgb(
+                                                                    232,
+                                                                    234,
+                                                                    235
+                                                                );
+                                                                height: 50px;
+                                                            "
+                                                        >
+                                                            <path
+                                                                _ngcontent-ng-c1628733639=""
+                                                                d="M19 3H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2ZM5 19V5h14l.002 14H5Z"
+                                                                fill="currentColor"
+                                                            ></path>
+                                                            <path
+                                                                _ngcontent-ng-c1628733639=""
+                                                                d="m10 14-1-1-3 4h12l-5-7-3 4ZM8.5 11a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
+                                                                fill="currentColor"
+                                                            ></path>
+                                                        </svg>
                                                     </div>
                                                     <div
                                                         class="product__item-center"
@@ -176,6 +210,7 @@
                                 </td>
                                 <td style="width: 8%">
                                     <img
+                                        *ngIf="data.productImage"
                                         [src]="imageUrl + data.productImage"
                                         alt="Product Image"
                                         style="
@@ -184,6 +219,29 @@
                                             border-radius: 4px;
                                         "
                                     />
+
+                                    <svg
+                                        *ngIf="!data.productImage"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        class="jss3869 ng-star-inserted"
+                                        style="
+                                            color: rgb(232, 234, 235);
+                                            height: 50px;
+                                        "
+                                    >
+                                        <path
+                                            _ngcontent-ng-c1628733639=""
+                                            d="M19 3H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2ZM5 19V5h14l.002 14H5Z"
+                                            fill="currentColor"
+                                        ></path>
+                                        <path
+                                            _ngcontent-ng-c1628733639=""
+                                            d="m10 14-1-1-3 4h12l-5-7-3 4ZM8.5 11a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
+                                            fill="currentColor"
+                                        ></path>
+                                    </svg>
                                 </td>
                                 <td style="width: 15.5%">
                                     {{ data.productName }}
@@ -392,7 +450,7 @@
                                 <div
                                     class="col-12 mb-2 md:col-6 md:mb-0 flex justify-content-end"
                                 >
-                                    28/6/2024 13:23
+                                    {{ this.stockInReceipt.createdAt }}
                                 </div>
                             </div>
 
